--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ botocore==1.20.69
 dj-database-url==0.5.0
 Django==3.2.2
 django-bootstrap-daterangepicker==1.0.6
+django-environ==0.4.5
 django-on-heroku==1.1.2
 django-phone-field==1.8.1
 gunicorn==20.1.0
 jmespath==0.10.0
 psycopg2-binary==2.8.6
 python-dateutil==2.8.1
+python-dotenv==0.17.1
 pytz==2021.1
 s3transfer==0.4.2
 six==1.16.0
