--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.3.4
 boto3==1.17.69
 botocore==1.20.69
+certifi==2020.12.5
+chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.2.2
 django-bootstrap-daterangepicker==1.0.6
@@ -8,11 +10,14 @@ django-environ==0.4.5
 django-on-heroku==1.1.2
 django-phone-field==1.8.1
 gunicorn==20.1.0
+idna==2.10
 jmespath==0.10.0
+mailchimp-marketing==3.0.41
 psycopg2-binary==2.8.6
 python-dateutil==2.8.1
 python-dotenv==0.17.1
 pytz==2021.1
+requests==2.25.1
 s3transfer==0.4.2
 six==1.16.0
 sqlparse==0.4.1
