--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-bootstrap-daterangepicker==1.0.6
 django-environ==0.4.5
 django-on-heroku==1.1.2
 django-phone-field==1.8.1
+environ==1.0
 environment==1.0.0
 gunicorn==20.1.0
 idna==2.10
@@ -16,6 +17,7 @@ jmespath==0.10.0
 mailchimp-marketing==3.0.51
 psycopg2-binary==2.9.1
 python-dateutil==2.8.1
+python-dotenv==1.0.0
 pytz==2021.1
 requests==2.25.1
 s3transfer==0.4.2
