--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,20 @@
+databases:
+  - name: electricars
+    databaseName: electricars
+    user: davidcibin
+
 services:
   - type: web
-    name: web
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn electricars.wsgi --workers 4
+    name: electricars
+    runtime: python
+    buildCommand: "./build.sh"
+    startCommand: "gunicorn electricars.wsgi:application"
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: electricars
+          property: connectionString
+      - key: SECRET_KEY
+        generateValue: true
+      - key: WEB_CONCURRENCY
+        value: 4
